123rf.com (archived on 2006-06-15)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business;foodandrecipes",
  "char_count": 1986,
  "classifier_probability": 0.83,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 12.38,
  "homepage_snapshot_redirected_domain": "123rf.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20060331152146id_/http://www.123rf.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20060331152146id_/http%3A//123rf.com",
  "interval": "2006_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "123rf.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20060615000540id_/http%3A//www.123rf.com/privacy.php",
  "policy_title": "123 Royalty Free - Stock Image and Photo Subscription",
  "policy_url": "123rf.com/privacy.php",
  "sha1": "21e2254807065b3faec74e37e65faecc72e4a9ab",
  "simhash": 11408383040249467736,
  "simhash_updated": true,
  "site_hostname": "123rf.com",
  "site_url": "http://123rf.com",
  "smog": NaN,
  "strict_updated": true,
  "timestamp": "20060615000540",
  "word_count": 327,
  "year": 2006
}

--- a/1/12/123/123rf.com.md
+++ b/1/12/123/123rf.com.md
@@ -1,13 +1,13 @@
-> *The following text is extracted and transformed from the 123rf.com privacy policy that was archived on 2005-12-18. Please check the [original snapshot on the Wayback Machine](https://web.archive.org/web/20051218125751id_/http%3A//www.123royaltyfree.com/privacy.php) for the most accurate reproduction.*
+> *The following text is extracted and transformed from the 123rf.com privacy policy that was archived on 2006-06-15. Please check the [original snapshot on the Wayback Machine](https://web.archive.org/web/20060615000540id_/http%3A//www.123rf.com/privacy.php) for the most accurate reproduction.*
 
 # 123 Royalty Free - Stock Image and Photo Subscription
 
-123RoyaltyFree.com respects every user's privacy. When you register with 123RoyaltyFree, we ask for your name, company, email address, birth date, gender, zip code, occupation, industry, and personal interests. Once you register with 123RoyaltyFree.com and sign in to our services, you are not anonymous to us. 123RoyaltyFree.com uses the information provided to enhance your surfing experience such as lightbox and to contact you about our specials and new products. The information we collect may be shared (with your consent upon registration) with our subsidiaries for similar purposes. 
+123rf.com respects every user's privacy. When you register with 123rf, we ask for your name, company, email address, birth date, gender, zip code, occupation, industry, and personal interests. Once you register with 123rf.com and sign in to our services, you are not anonymous to us. 123rf.com uses the information provided to enhance your surfing experience such as lightbox and to contact you about our specials and new products. The information we collect may be shared (with your consent upon registration) with our subsidiaries for similar purposes. 
 
-By using this website, you understand that all information collected from your registration will be collected indefinitely; and may be stored and used in jurisdiction whose privacy laws may be different and less protective than those of your home jurisdiction. 123RoyaltyFree.com may use the information collected for a variety of purposes including direct marketing via email and snail mail (unless you select not to receive such information when registering). 
+By using this website, you understand that all information collected from your registration will be collected indefinitely; and may be stored and used in jurisdiction whose privacy laws may be different and less protective than those of your home jurisdiction. 123rf.com may use the information collected for a variety of purposes including direct marketing via email and snail mail (unless you select not to receive such information when registering). 
 
-When you visit 123RoyaltyFree's website, we place a text file call cookie in your computer hard disk. This file allows us to provide you with more convenience such as the lightbox and enhance your surfing experience. Most browsers allow you to reject cookies, but if you were to do so, these pages may not display properly. 
+When you visit 123rf's website, we place a text file call cookie in your computer hard disk. This file allows us to provide you with more convenience such as the lightbox and enhance your surfing experience. Most browsers allow you to reject cookies, but if you were to do so, these pages may not display properly. 
 
-123RoyaltyFree.com reserves the right to disclose your personal information if required to do so by law, or in the good faith belief that such action is reasonably necessary to comply with legal process, respond to claims, or protect the rights, property or safety of our company, employees, customers, or the public. 
+123rf.com reserves the right to disclose your personal information if required to do so by law, or in the good faith belief that such action is reasonably necessary to comply with legal process, respond to claims, or protect the rights, property or safety of our company, employees, customers, or the public. 
 
-123RoyaltyFree.com uses as much effort as possible to ensure the accurateness and reliability of the content, but make no representations or warranties as to the contents accuracy, or reliability. There are links to other websites which are beyond our control. You waive any and all claims against 123RoyaltyFree.com for any and all issues regarding these links. 
+123rf.com uses as much effort as possible to ensure the accurateness and reliability of the content, but make no representations or warranties as to the contents accuracy, or reliability. There are links to other websites which are beyond our control. You waive any and all claims against 123rf.com for any and all issues regarding these links. 
