5280.com (archived on 2006-06-15)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business;education",
  "char_count": 10754,
  "classifier_probability": 0.82,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 11.07,
  "homepage_snapshot_redirected_domain": "5280.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20060326170503id_/http://www.5280.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20060326170503id_/http%3A//5280.com",
  "interval": "2006_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "5280.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20060615112014id_/http%3A//www.5280.com/privacy_policy.php",
  "policy_title": "5280.com - Privacy Policy",
  "policy_url": "5280.com/privacy_policy.php",
  "sha1": "8bbd3f607305fc85f561f61b673472efc9cf94e4",
  "simhash": 15864355778862557132,
  "simhash_updated": true,
  "site_hostname": "5280.com",
  "site_url": "http://5280.com",
  "smog": 13.24,
  "strict_updated": true,
  "timestamp": "20060615112014",
  "word_count": 1763,
  "year": 2006
}

--- a/5/52/528/5280.com.md
+++ b/5/52/528/5280.com.md
@@ -1,27 +1,23 @@
-> *The following text is extracted and transformed from the 5280.com privacy policy that was archived on 2005-12-29. Please check the [original snapshot on the Wayback Machine](https://web.archive.org/web/20051229005019id_/http%3A//www.5280.com/privacy_policy.php) for the most accurate reproduction.*
+> *The following text is extracted and transformed from the 5280.com privacy policy that was archived on 2006-06-15. Please check the [original snapshot on the Wayback Machine](https://web.archive.org/web/20060615112014id_/http%3A//www.5280.com/privacy_policy.php) for the most accurate reproduction.*
 
 # 5280.com - Privacy Policy
 
-[](http://www.5280.com/issues/2005/0512/index.php)
+[](http://www.5280.com/issues/2006/0606/index.php)
 
-Receive 5280 news via email including our popular Best Bets and Table Talk newsletters.  
-[Signup today](http://www.5280.com/get_emailnews.php#subscribe).
+**Looking for Denver's latest restaurant news?** The latest happenings around town? How about great deals that are only available to readers of 5280.com? Sign up today for our great [5280 email newsletters](http://www.5280.com/get_emailnews.php#subscribe) and you'll be in the know.
 
-**Join Us!**  
-We're looking for a _Senior Editor_. Get the scoop on our [Jobs page](http://www.5280.com/5280_opportunities.php).
+**We're hiring!** Join 5280 in the newly created position of Web Editor. Details on the position and how to apply are [here](http://www.5280.com/5280_opportunities.php).
 
-**5280 and local bloggers** uncover plagiarism and evasion at the _Rocky Mountain News_. Our original report is [here](http://www.5280.com/blog/?p=1066) and an update from the September issue is [here](http://www.5280.com/issues/2005/0509/feature.php?pageID=136).
-
-**This year's Leadville 100** has come and gone. Read the story behind . Get the [Colorado's Most Amazing and Punishing (and Magical) Race.](http://www.5280.com/issues/2005/0506/feature.php?pageID=24)
+**Tell us about it.** Give us your [restaurant feedback](http://www.5280.com/dining_feedback.php) or [submit your event](http://www.5280.com/event_submission.php) for our online and printed calendar.
 
 **Many of 5280's** most popular special reports — including Top Doctors, Denver Childcare, and more — are now available for purchase and download [here](http://store.yahoo.com/5280magazine/dido.html). ([Adobe Acrobat](http://www.adobe.com/products/acrobat/readstep2.html) required.)
 
 This month sample:  
-**MEESE**
+**DKO**
 
   
-Track: After I am Gone  
-[Download mp3](http://www.5280.com/mp3/after_i_am_gone.mp3)
+Track: In The Now Part II  
+[Download mp3](http://www.5280.com/2006/mp3/in_the_now_part_2.mp3)
 
 | 
 
