15on1.com (archived on 2007-12-30)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "uncategorized",
  "char_count": 5724,
  "classifier_probability": 0.85,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "very_confusing",
  "flesch_kincaid": 17.76,
  "homepage_snapshot_redirected_domain": "15on1.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20071001041039id_/http://www.15on1.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20071001041039id_/http%3A//15on1.com",
  "interval": "2007_B",
  "link_text": "Privacy Notice",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "15on1.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20071230220907id_/http%3A//15on1.com/privacy.html",
  "policy_title": "Privacy",
  "policy_url": "15on1.com/privacy.html",
  "sha1": "321578eeb3c5c710efc070c3b2400772d20d816f",
  "simhash": 5321647478865104148,
  "simhash_updated": true,
  "site_hostname": "15on1.com",
  "site_url": "http://15on1.com",
  "smog": NaN,
  "strict_updated": true,
  "timestamp": "20071230220907",
  "word_count": 936,
  "year": 2007
}

--- a/1/15/15o/15on1.com.md
+++ b/1/15/15o/15on1.com.md
@@ -1,4 +1,4 @@
-> *The following text is extracted and transformed from the 15on1.com privacy policy that was archived on 2006-11-15. Please check the [original snapshot on the Wayback Machine](https://web.archive.org/web/20061115140935id_/http%3A//www.15on1.com/privacy.html) for the most accurate reproduction.*
+> *The following text is extracted and transformed from the 15on1.com privacy policy that was archived on 2007-12-30. Please check the [original snapshot on the Wayback Machine](https://web.archive.org/web/20071230220907id_/http%3A//15on1.com/privacy.html) for the most accurate reproduction.*
 
 # Privacy
 
@@ -7,15 +7,7 @@
 
 * * *
 
-We have created this Privacy Policy to demonstrate our dedication to respecting privacy. This Privacy Policy sets out our practices with respect to personal information collected regarding visitors and subscribers (collectively referred as "you") of this Site. This Site is an adult website and membership is solely restricted to adults; persons under the age of eighteen are strictly prohibited from this Site and we do not intentionally collect information on individuals under the age of eighteen. By visiting or subscribing to this Site, you agree and consent to the terms of this Privacy Policy as amended from time to time, as well as the terms and conditions of this Site.   
-  
-This website is an online subscription service owned and operated by it's wholly owned, PV Imagesoft SL, Spain.
-
-###  What Information is Collected? 
-
-###  Personal Information 
-
-We collect personal information that is voluntarily provided to us via the registration form for any of our services or memberships. This information may include, but not be limited to, the subscriber's name, physical address, email address, birth date, credit card number, credit card expiration date, username, password, and on occasion a unique identifier (such as their mother's maiden name). If a subscriber sends any personal communication or correspondence, by any means, to the Site, or any of its employees, agents or representatives, the Site may collect any information regarding that communication and include that information in its customer database. 
+We have created this Privacy Policy to demonstrate our dedication to respecting privacy. This Privacy Policy sets out our practices with respect to personal information collected regarding visitors and subscribers (collectively referred as "you") of this Site. This Site is an adult website and membership is solely restricted to adults; persons under the age of eighteen are strictly prohibited from this Site and we do not intentionally collect information on individuals under the age of eighteen. By visiting or subscribing to this Site, you agree and consent to the terms of this Privacy Policy as amended from time to time, as well as the terms and conditions of this Site. 
 
 ###  Non-Personal Information and Cookies 
 
@@ -37,7 +29,7 @@ If you have received unsolicited email sent via this system or purporting to be 
 
 ###  Security 
 
-This Site has security measures in place to protect the loss, misuse and alteration of the information under our control. Regarding all credit card transactions, the credit card information you provide to us is transmitted for processing via SSL encryption technology, which is the current standard in Internet encryption. As for all other information, visitors and subscribers should consider this communication and information to be non-confidential, and consequently, we assume no responsibility or liability if any information relating to any visitor or subscriber is intercepted and/or used by an unintended recipient. 
+This Site has security measures in place to protect the loss, misuse and alteration of the information under our control.As for all other information, visitors and subscribers should consider this communication and information to be non-confidential, and consequently, we assume no responsibility or liability if any information relating to any visitor or subscriber is intercepted and/or used by an unintended recipient. 
 
 ###  Acceptance of these Terms 
 
