--- a/a/a9/a9./a9.com.md
+++ b/a/a9/a9./a9.com.md
@@ -1,4 +1,4 @@
-> *The following text is extracted and transformed from the a9.com privacy policy that was archived on 2007-06-30. Please check the [original snapshot on the Wayback Machine](https://web.archive.org/web/20070630055540id_/http%3A//a9.com/-/company/privacypolicy.jsp) for the most accurate reproduction.*
+> *The following text is extracted and transformed from the a9.com privacy policy that was archived on 2007-12-30. Please check the [original snapshot on the Wayback Machine](https://web.archive.org/web/20071230223801id_/http%3A//www.a9.com/-/company/privacypolicy.jsp) for the most accurate reproduction.*
 
 # A9.com - Innovations in Search Technologies - Privacy Policy
 
