--- a/m/m0/m00/m00.com.md
+++ b/m/m0/m00/m00.com.md
@@ -1,4 +1,4 @@
-> *The following text is extracted and transformed from the m00.com privacy policy that was archived on 2005-12-21. Please check the [original snapshot on the Wayback Machine](https://web.archive.org/web/20051221143747id_/http%3A//onlineearth.com/privacy.asp) for the most accurate reproduction.*
+> *The following text is extracted and transformed from the m00.com privacy policy that was archived on 2008-01-06. Please check the [original snapshot on the Wayback Machine](https://web.archive.org/web/20080106161336id_/http%3A//www.m00.com/privacy.asp) for the most accurate reproduction.*
 
 # Internet Privacy Policy from The Online Earth Network
 
@@ -27,7 +27,7 @@ Personal information may include name, title, company, address, phone number and
 
 #### Our Use Of Cookies
 
-OnlineEarth.com may place an electronic "cookie" in the browser files of your computer to facilitate and enhance your communication and interaction with our site. Many web sites use cookies for these purposes. Cookies themselves do not enable us to access any personal information about our visitors; however, they do allow OnlineEarth.com to analyze visitors’ use of our site. This analysis helps us better understand which areas of our sites are most useful and popular so we can plan improvements and updates accordingly. OnlineEarth.com does not use cookies to retrieve information from a visitor’s computer that was not originally sent in a cookie. 
+OnlineEarth.com may place an electronic "cookie" in the browser files of your computer to facilitate and enhance your communication and interaction with our site. Many web sites use cookies for these purposes. Cookies themselves do not enable us to access any personal information about our visitors; however, they do allow OnlineEarth.com to analyze visitors' use of our site. This analysis helps us better understand which areas of our sites are most useful and popular so we can plan improvements and updates accordingly. OnlineEarth.com does not use cookies to retrieve information from a visitor's computer that was not originally sent in a cookie. 
 
 #### Internet Security
 
