--- a/g/g2/g20/g20.org.md
+++ b/g/g2/g20/g20.org.md
@@ -1,56 +1,21 @@
-> *The following text is extracted and transformed from the g20.org privacy policy that was archived on 2007-11-21. Please check the [original snapshot on the Wayback Machine](https://web.archive.org/web/20071121050319id_/http%3A//www.g20.org/iframes/privacy.html) for the most accurate reproduction.*
+> *The following text is extracted and transformed from the g20.org privacy policy that was archived on 2009-06-08. Please check the [original snapshot on the Wayback Machine](https://web.archive.org/web/20090608201743id_/http%3A//www.g20.org/297.aspx) for the most accurate reproduction.*
 
-# generic_iframe
+# Privacy statement
 
-The National Treasury, South Africa, as manager of the G-20 website, is committed to respecting the privacy of visitors to the G-20 website in 2007. The G-20 members are the finance ministries and central banks of 19 countries: Argentina, Australia, Brazil, Canada, China, France, Germany, India, Indonesia, Italy, Japan, Mexico, Russia, Saudi Arabia, South Africa, South Korea, Turkey, the United Kingdom and the United States of America. Another member is the European Union, represented by the Council presidency and the European Central Bank. The managing director of the IMF and the president of the World Bank, plus the chairs of the International Monetary and Financial Committee and Development Committee of the IMF and World Bank, also participate in the talks as ex-officio members. This statement sets out the National Treasury, South Africa’s current practices concerning information collection and dissemination through this website.
+### 1\. Website site usage information
 
-Collection of Information   
-Security of Information   
-Access to Information   
-Use and Disclosure of Information   
-Complaints and Enquiries
+This website does not store or capture personal information, but merely logs the users Internet Protocol (IP) address*. Our log files for the site do not contain any personal information or information about other sites you have visited.
 
- **Logged Information**   
-When you connect to this website, the Internet service provider (ISP) logs the following information, provided by your browser, for statistical purposes:  
-the type of browser and operating system you are using;   
-your top level domain name (for example .com, .gov, .co.za, etc.);   
-the address of the referring website (i.e. the website that directed you to our website); and   
-your server's IP address (a number which is unique to the machine through which you are connected to the Internet: usually one of your service provider's machines). 
+We do not use Cookies* for collecting user information from the site and we will not collect any other information from you, except that required for system administration of our web server.
 
-In addition, the National Treasury, South Africa server logs the following information:   
-the date and time of your visit; and   
-the address of the pages accessed and the documents downloaded.   
-Information from ISP logs will only be disclosed if the National Treasury, South Africa or any other G-20 member is required by law to do so. 
+Other web sites linked from this site do not necessarily follow the same policies. Further information on your rights under the Data Protection Act 1998 can be found on the [Information Commissioner's Website](http://www.dataprotection.gov.uk/) .
 
-**E-mail Addresses**   
-The National Treasury, South Africa, as manager of the G-20 website, will record your e-mail address if you send us an e-mail message. Your e-mail address will only be used for the purpose for which you provide it, and will not be added to a mailing list or provided to a third party unless you request that this be done. The National Treasury, South Africa, as manager of the G-20 website, will not disclose your e-mail address or personal information without your consent. 
+###  2\. Contacting us
 
-**Cookies**   
-The National Treasury, South Africa, as manager of the G-20 website, does not use 'cookies' to get information about you or your use of the G-20 website. A 'cookie' is a file that could be placed on your hard drive by a website without your knowledge to allow it to monitor how the site is used. 
+If you send an e-mail or message, you may initially receive an automated response advising you how to find the information that you are seeking.  If that response is not helpful then we will answer your email personally. In doing so we may need to contact other Government Departments to find answers to your questions. In such cases we will only pass on personal data if it is necessary to do so, and we will not keep your personal data or records of our correspondence longer than necessary.
 
-Any changes to the 'cookies' policy will be notified on this page. 
+If you have any queries about this privacy statement, you can contact us at [editor@hm-treasury.gov.uk](mailto:editor@hm-treasury.gov.uk) .
 
-**Links to other sites**  
-Links to other websites are provided to help meet your needs but the National Treasury, South Africa, as manager of the G-20 website or any other member of the G-20, is not responsible for the content or privacy policies of those sites. The G-20 website's Disclaimer provides further information. 
+*Definitions and further information on these terms can be found at the [Directgov](http://www.direct.gov.uk/) website.
 
-**Security of Information**  
-If you provide the National Treasury, South Africa, as manager of the G-20 website, with personal information via e-mail or any other means, your information may become part of the records of the National Treasury, South Africa. The National Treasury, South Africa takes all reasonable care to secure personal information and protect it against unauthorised access and misuse. If you are submitting personal or other information over the Internet please note that, while all attempts are made to ensure security of information transmitted to this site, there is a possibility that information you send could be seen by a third party while it is in transit. 
-
-Personal information from the National Treasury, South Africa ISP logs will only be disclosed if the National Treasury, South Africa is required by law to do so. 
-
-**Access to Information**   
-When required by law, e.g. search warrant or subpoena, personal information requested (including an inspection of the National Treasury, South Africa’s ISP logs) will be provided to law enforcement agencies, courts or regulatory bodies. 
-
-**Use and Disclosure of Information**  
-Your personal information will only be used for the purpose for which you provide it, and will not be added to a mailing list or provided to any other party. 
-
-**Complaints and Enquiries**  
-If you wish to make a complaint or enquire about the National Treasury, South Africa privacy policy and practices you can contact our Privacy Officer by:
-
-E-mail:  | G20administration@treasury.gov.za  
----|---  
-Post: | G-20 Secretariat  
-The National Treasury   
-240 Vermeulen Street  
-Pretoria 0001   
-South Africa
+Back to top
