411.com (archived on 2009-10-05)
{
  "alexa_rank": 6598,
  "analysis_subcorpus": true,
  "categories": "business",
  "char_count": 9952,
  "classifier_probability": 1.0,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 11.39,
  "homepage_snapshot_redirected_domain": "411.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20090920154837id_/http://www.411.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20090920154837id_/http%3A//411.com",
  "interval": "2009_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "411.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20091005015956id_/http%3A//www.411.com/privacy",
  "policy_title": "411.com - Online Directory Assistance",
  "policy_url": "411.com/privacy",
  "sha1": "fd3919a57da4494213d21a95b6f0472c0b387794",
  "simhash": 16420552763324871077,
  "simhash_updated": true,
  "site_hostname": "411.com",
  "site_url": "http://411.com",
  "smog": 13.97,
  "strict_updated": true,
  "timestamp": "20091005015956",
  "word_count": 1596,
  "year": 2009
}

--- a/4/41/411/411.com.md
+++ b/4/41/411/411.com.md
@@ -1,4 +1,4 @@
-> *The following text is extracted and transformed from the 411.com privacy policy that was archived on 2009-05-05. Please check the [original snapshot on the Wayback Machine](https://web.archive.org/web/20090505205153id_/http%3A//www.411.com/privacy) for the most accurate reproduction.*
+> *The following text is extracted and transformed from the 411.com privacy policy that was archived on 2009-10-05. Please check the [original snapshot on the Wayback Machine](https://web.archive.org/web/20091005015956id_/http%3A//www.411.com/privacy) for the most accurate reproduction.*
 
 # 411.com - Online Directory Assistance
 
@@ -8,11 +8,11 @@
 
 **Our Approach to Privacy**
 
-It is our goal to make it fantastically simple for everyone to connect with confidence through our network of WhitePages websites. The key word here is "confidence." We want you to understand how your information is collected and used.
+It is our goal to make it fantastically simple for everyone to connect with confidence through our network of WhitePages websites. The key word here is “confidence.” We want you to understand how your information is collected and used.
 
 **Information Published on WhitePages Websites**
 
-It's important for you to know that we acquire much of the information published on our websites from third-party data suppliers and other sources. Our Privacy Policy does not apply to that information. It applies only to the information that you provide directly to us. We detail the specifics below.
+It’s important for you to know that we acquire much of the information published on our websites from third-party data suppliers and other sources. Our Privacy Policy does not apply to that information. It applies only to the information that you provide directly to us. We detail the specifics below.
 
 **Remove Published Listing Information**
 
@@ -20,7 +20,7 @@ If you want to remove listing information - such as your name, address and phone
 
 **WhitePages Privacy Policy**
 
-**This policy is effective as of April 29, 2009.**
+**This policy is effective as of May 20, 2009.**
 
 Our privacy policy will help you understand the different types of information we collect when you use our services (the "Services"). By using our Services, you agree to our privacy policy and terms of service. We may change or update this policy from time to time. Any updated policy shall be effective immediately after it is posted.
 
@@ -76,7 +76,7 @@ We use General Information to facilitate your use of our Services and to help us
 
 **How Third Parties Collect & Use Your Information**
 
-WhitePages works with Audience Science and other third party companies to deliver advertisements on our websites. These third parties may collect and use General Information to deliver more relevant advertising to you and for their own business purposes.
+WhitePages may host or display third-party advertising or work with companies who do so. These third parties may collect and use General Information to deliver more relevant advertising to you and for their own business purposes.
 
 **Opt-Out Option:**
 
