--- a/x/x5/x5./x5.com.au.md
+++ b/x/x5/x5./x5.com.au.md
@@ -1,6 +1,6 @@
-> *The following text is extracted and transformed from the x5.com.au privacy policy that was archived on 2009-04-11. Please check the [original snapshot on the Wayback Machine](https://web.archive.org/web/20090411154100id_/http%3A//www.x5.com.au/privacy-policy.php) for the most accurate reproduction.*
+> *The following text is extracted and transformed from the x5.com.au privacy policy that was archived on 2009-10-13. Please check the [original snapshot on the Wayback Machine](https://web.archive.org/web/20091013152912id_/http%3A//www.x5.com.au/privacy-policy.php) for the most accurate reproduction.*
 
-# Online Shopping | Reverse Auction | Timed Auction | Home and Lifestyle | Electronics | Perfume and Fragrance | X5
+# Online Shopping, Reverse & Timed Auctions | X5
 
 ## Privacy Policy
 
