--- a/v/v3/v3./v3.co.uk.md
+++ b/v/v3/v3./v3.co.uk.md
@@ -1,6 +1,6 @@
-> *The following text is extracted and transformed from the v3.co.uk privacy policy that was archived on 2009-02-03. Please check the [original snapshot on the Wayback Machine](https://web.archive.org/web/20090203151535id_/http%3A//www.vnunet.com/about/privacy) for the most accurate reproduction.*
+> *The following text is extracted and transformed from the v3.co.uk privacy policy that was archived on 2009-10-26. Please check the [original snapshot on the Wayback Machine](https://web.archive.org/web/20091026005458id_/http%3A//www.v3.co.uk/about/privacy) for the most accurate reproduction.*
 
-# Privacy policy - vnunet.com
+# Privacy policy - V3.co.uk - formerly vnunet.com
 
 ## Introduction
 
@@ -28,22 +28,20 @@ This statement discloses the privacy policy for the Incisive Media network of si
 
   * [http://www.accountancyage.com](http://www.accountancyage.com/ "Accountancy Age")
   * [http://www.accountancyagejobs.com](http://www.accountancyagejobs.com/ "Accountancy Age Jobs")
-  * [http://www.activehome.co.uk](http://www.activehome.co.uk/ "Active Home")
+  * [http://www.businessgreen.com](http://www.businessgreen.com/ "BusinessGreen")
+  * [http://www.channelweb.co.uk](http://www.channelweb.co.uk/ "CRN")
   * [http://www.computeractive.co.uk](http://www.computeractive.co.uk/ "Computeractive")
-  * [http://www.computercontractor.co.uk](http://www.computercontractor.co.uk/ "Computer Contractor")
   * [http://www.computing.co.uk](http://www.computing.co.uk/ "Computing")
+  * [http://www.computingbusiness.co.uk](http://www.computingbusiness.co.uk/ "Computing Business")
   * [http://www.computingcareers.co.uk](http://www.computingcareers.co.uk/ "Computing Careers")
   * [http://www.financialdirector.co.uk](http://www.financialdirector.co.uk/ "Financial Director")
-  * [http://www.infomaticsonline.co.uk](http://www.infomaticsonline.co.uk/ "Infomatics")
-  * [http://www.itweek.co.uk](http://www.itweek.co.uk/ "IT Week")
-  * [http://www.iwr.co.uk](http://www.iwr.co.uk/ "Information world Review")
+  * [http://www.iwr.co.uk](http://www.iwr.co.uk/ "Information World Review")
+  * [http://www.theinquirer.net](http://www.theinquirer.net/ "The Inquirer")
   * [http://www.managementconsultancy.co.uk](http://www.managementconsultancy.co.uk/ "Management Consultancy")
-  * [http://www.networknews.co.uk](http://www.networknews.co.uk/ "Network IT Week")
   * [http://www.pcmag.co.uk](http://www.pcmag.co.uk/ "PC Magazine")
   * [http://www.pcw.co.uk](http://www.pcw.co.uk/ "Personal Computer World")
-  * [http://www.vnunet.com](http://www.vnunet.com/ "vnunet.com")
-  * [http://www.vnuservices.co.uk](http://www.vnuservices.co.uk/ "VNU Services")
-  * [http://www.webactivemagazine.co.uk](http://www.webactivemagazine.co.uk/ "Webactive")
+  * [http://www.v3.co.uk](http://www.v3.co.uk/ "V3.co.uk")
+  * [http://www.whatpc.co.uk](http://www.whatpc.co.uk/ "WhatPC?")
   * and subdomains of these websites
 
 
