--- a/1/15/150/150m.com.md
+++ b/1/15/150/150m.com.md
@@ -1,4 +1,4 @@
-> *The following text is extracted and transformed from the 150m.com privacy policy that was archived on 2013-06-20. Please check the [original snapshot on the Wayback Machine](https://web.archive.org/web/20130620103742id_/http%3A//www.150m.com/privacy-policy.html) for the most accurate reproduction.*
+> *The following text is extracted and transformed from the 150m.com privacy policy that was archived on 2013-12-20. Please check the [original snapshot on the Wayback Machine](https://web.archive.org/web/20131220212322id_/http%3A//150m.com/privacy-policy.html) for the most accurate reproduction.*
 
 # Free Web Hosting by Free Web Space Inc.
 
