--- a/c/c2/c2e/c2e2.com.md
+++ b/c/c2/c2e/c2e2.com.md
@@ -1,6 +1,6 @@
-> *The following text is extracted and transformed from the c2e2.com privacy policy that was archived on 2013-06-19. Please check the [original snapshot on the Wayback Machine](https://web.archive.org/web/20130619031824id_/http%3A//www.c2e2.com/en/Privacy-Policy) for the most accurate reproduction.*
+> *The following text is extracted and transformed from the c2e2.com privacy policy that was archived on 2013-12-21. Please check the [original snapshot on the Wayback Machine](https://web.archive.org/web/20131221111142id_/http%3A//www.c2e2.com/en/Privacy-Policy) for the most accurate reproduction.*
 
-# Privacy Policy - C2E2 - Chicago Comic & Entertainment Expo - April 25-27, 2014
+# Privacy & Cookie Policy - C2E2 - Chicago Comic & Entertainment Expo - April 25-27, 2014
 
 Reed Exhibitions and C2E2 respect the information provided by our customers. Because we gather certain types of information when our customers communicate with us, we believe you should fully understand the terms and conditions surrounding the information we capture and the use of that information. This privacy statement discloses the type of information we capture about our customers, how we use it to communicate with our customers, and how you can request to no longer receive communications from C2E2.
 
@@ -32,12 +32,61 @@ This site utilizes a secure server to protect your financial and professional in
 
 Products of C2E2 use Secure Sockets Layer (SSL) protocol to safeguard customer information during online transactions. SSL encryption is the generally accepted method of transaction security in online ordering.
 
-## Cookies
+## What are “cookies”?
 
-A "cookie" is a bit of data sent by a website through the browser to the computer of the user visiting the site, and enables the site to return the results the browser expects. The C2E2 website uses temporary, session-specific cookies to ensure visits to its websites are smooth and customized for the visitor. Such cookies allow us to provide a visitor's browser with information tailored to the visitor's preferences and needs. We use permanent or persistent cookies that remain on a visitor's computer after the visitor leaves the C2E2 website. However, our cookies neither reveal nor contain any identifying or personal data. Cookies also cannot read any information on a visitor's computer or interact with other cookies on the visitor's hard drive.
+“Cookies” (also known as HTTP cookies, web cookies or browser cookies) are simply small pieces of data, which are stored as text files on your computer, whenever you visit certain websites. Their typical purpose is to help sites remember particular actions you may have done there in the past. For example, cookies may track when you have logged into a site, visited certain pages or clicked certain buttons.
 
-If you do not want your browser to accept cookies, you can turn off the cookie acceptance option in the browser's settings. However, disabling the cookie support function of the browser will prevent our website from functioning properly and you may not be able to utilize fully all of the site's features and information.
+Websites maintained by Reed Exhibitions Limited© (RX) use cookies to improve your user experience. In many cases, cookies are even essential for certain features of a site.
 
+#### For example, we use cookies to: 
+
+  * Remember when you have logged into a site.
+  * Remember your user preferences, searches and favourites.
+  * Track your usage of a site, via WebAbacus© and Google Analytics©.
+  * Track the success of our marketing campaigns. Additionally, RX websites have a small set of carefully selected third-party providers.
+
+
+
+#### These third-parties use cookies to: 
+
+  * Target more relevant advertisements to you (DoubleClick™, 6-degrees©)
+  * Enable social media sharing (AddThis©, Facebook©, Twitter©, YouTube©)
+  * Ensure better service delivery (Ooyala®) You can view a full list of all cookies used by RX websites in the “What cookies do we use and why?” section.
+
+
+
+### Are cookies harmful?
+
+Cookies cannot harm you or your computer. They cannot contain viruses, cannot install harmful software and cannot damage your computer in any way. Although RX uses cookies to gather encrypted information to improve your user experience, this information is never personally identifiable. We do not use cookies to store any sensitive information, such as name, address or contact details.
+
+Despite this, if you do wish to disable or remove cookies, please see the “Help” section of your browser or mobile device. Each browser or device handles the management of cookies differently, so you will need to refer to your appropriate “Help” documentation. However, as mentioned, please be aware that cookies are essential for certain features of an RX site to work properly.
+
+### Why are we telling you this?
+
+The information provided here on the use of cookies on RX websites demonstrates our compliance with recent cookie legislation. We also want you, as a valued RX website user, to fully understand your privacy, how cookies affect you and to be entirely comfortable with your RX website experience.
+
+We trust that this information eases any concerns you may have had about your privacy and safety with cookies. BY CONTINUING TO USE OUR WEBSITE, YOU AGREE TO BE SUBJECT TO THE TERMS OF THIS COOKIES POLICY AND OUR USE OF COOKIES AS DISCLOSED IN THIS POLICY.
+
+### What cookies do we use and why?
+
+The following shows the full list of platform cookies, used throughout all RX websites.
+
+Name | Owner | Duration | Purpose  
+---|---|---|---  
+__utma | Google Analytics | 2 years | Google Analytics© is another analytics solution, which provides information about your activity on an RX website. As with WebAbacus?, this helps us to understand what works on the site and better tailor it to your needs. This cookie is used to determine unique visitors to an RX website. It is updated with each page view.  
+_utmb | Google Analytics | 30 minutes | This is another Google Analytics© cookie. It is used to establish a user session with an RX website.  
+_utmc | Google Analytics | None | This is another Google Analytics© cookie. It determines whether or not a new session has been created.  
+_utmz | Google Analytics | 6 months | This is another Google Analytics© cookie. It is used to identify how you arrived at the site, whether via a direct method, a referring link, a website search or a campaign, such as an advertisement or email link. This cookie is used to calculate search engine traffic, advertisement campaigns and page navigation. It is updated with each page view.  
+.EPiServerLogin | Reed Exhibitions | Session | This cookie is set when you log into an RX website. It remembers that you are logged in, as you navigate through the site?s pages.  
+[HOST]_trackingData | Reed Exhibitions | 14 days | Similar to the campaigns.site.[THIS SITE] cookie, if you have arrived at an RX website via one of our marketing campaigns, this cookie stores the campaign?s information and reports its success to us.  
+campaigns.site.[THIS SITE] | Reed Exhibitions | 1 hour | If you have arrived at an RX website via one of our marketing campaigns, this cookie stores the campaign?s information and reports its success to us.  
+novaState | Reed Exhibitions | Session | This cookie helps an RX website to remember your preferences. For example, if you view a site in a chosen language, every page within your session is then displayed in this language. As another example, if you add an exhibitor to your Show Planner, this is recorded by the cookie so that this exhibitor will be displayed in your planner, the next time you visit.  
+showcookiecompliance | Reed Exhibitions | Permanent | This cookie is set when you dismiss the "Privacy and Cookies" message, displayed at the bottom of an RX website. Once set, it ensures you will not be shown this message again.  
+url referrer | Reed Exhibitions | Session | If you have arrived at an RX website via one of our marketing campaigns, this cookie helps us report on the webpage from which you arrived.  
+voviciSurvey_invitationDateTime | Reed Exhibitions | 60 minutes | This is another Vovici© cookie. It ensures that a survey is only served to you, after you have been on the site for more than two minutes.  
+voviciSurvey_noInvitations | Reed Exhibitions | 10 years | Vovici© is the company used by RX to supply website surveys, often to elicit feedback on the websites themselves. This cookie remembers when you have completed a survey and prevents it from being served to you again.  
+webtolead.site.[THIS SITE] | Reed Exhibitions | 1 Year | When you have: Submitted a request to attend, exhibit or advertise at an RX show OR Provided your details in order to access premium content on an RX site. This cookie remembers that you have already done so and ensures that you do not have to re-submit your request or re-enter your details.  
+  
 ## Policy Changes
 
 RX-US reserves the right to review and change this Policy. Policy changes may be made without prior notice to existing customers. Policy revisions only apply to information gathered as of the effective date of the revised policy, unless we give you notice and choice as to the changes in use, in which case all information is subject to the new policy.
