192.com (archived on 2013-12-22)
{
  "alexa_rank": 3050,
  "analysis_subcorpus": true,
  "categories": "business;informationtech",
  "char_count": 13554,
  "classifier_probability": 0.97,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 12.57,
  "homepage_snapshot_redirected_domain": "192.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20130930051620id_/http://www.192.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20130930051620id_/http%3A//192.com",
  "interval": "2013_B",
  "link_text": "Privacy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "192.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20131222101838id_/http%3A//www.192.com/misc/privacy-policy",
  "policy_title": "Privacy Policy - 192.com",
  "policy_url": "192.com/misc/privacy-policy",
  "sha1": "6944855ae03c546028eb09b427be28a711b1fc63",
  "simhash": 10040745084970684016,
  "simhash_updated": false,
  "site_hostname": "192.com",
  "site_url": "http://192.com",
  "smog": 14.65,
  "strict_updated": true,
  "timestamp": "20131222101838",
  "word_count": 2222,
  "year": 2013
}

--- a/1/19/192/192.com.md
+++ b/1/19/192/192.com.md
@@ -1,4 +1,4 @@
-> *The following text is extracted and transformed from the 192.com privacy policy that was archived on 2013-05-28. Please check the [original snapshot on the Wayback Machine](https://web.archive.org/web/20130528042759id_/http%3A//www.192.com/misc/privacy-policy) for the most accurate reproduction.*
+> *The following text is extracted and transformed from the 192.com privacy policy that was archived on 2013-12-22. Please check the [original snapshot on the Wayback Machine](https://web.archive.org/web/20131222101838id_/http%3A//www.192.com/misc/privacy-policy) for the most accurate reproduction.*
 
 # Privacy Policy - 192.com
 
@@ -70,7 +70,7 @@ For convenience, 192.com obtains the Edited Electoral Register from a credit ref
 
 [www.mpsonline.org.uk](http://www.mpsonline.org.uk/ "Visit Mail Preference Service website")
 
-In addition to opting-out of the Edited Electoral Register through Your local council, You may also contact 192.com directly to be removed from the Electoral Registers published on the Service. To do this please [download the record removal form](http://statics.192.com/rel-3.59/downloads/C01.pdf "Click to download form") and mail it to the address given or fax it to 0207 909 2169.
+In addition to opting-out of the Edited Electoral Register through Your local council, You may also contact 192.com directly to be removed from the Electoral Registers published on the Service. To do this please [download the record removal form](http://statics.192.com/rel-4b68/downloads/C01.pdf "Click to download form") and mail it to the address given or fax it to 0207 909 2169.
 
 ### Company Directors Database
 
@@ -82,7 +82,7 @@ The Company Directors Database is a list of all UK company directors which is co
 
 If You register with 192.com You will be asked to provide Your name and email address and You will be asked to choose a password for Your account. This information helps to ensure that Your account is protected and allows 192.com to display private information to You about Your account. Your e-mail address is used as Your 192.com user name, but it also provides a means of contacting You about Your account, about the Service and to promote our products and services to You.
 
-If You pay to access premium services on the Service it will be necessary to provide Your address, credit / debit card details and date of birth. This enables the card transaction to be processed including checks to prevent unauthorized use of Your credit card by fraudsters. In performing these checks Your Personal Information may be disclosed to a registered Credit Reference Agency which may keep a record of that information. You can rest assured that this is done only to confirm Your identity, that a credit check is not performed and that Your credit rating will be unaffected.
+If You pay to access premium services on the Service it will be necessary to provide Your address and credit / debit card details. This enables the card transaction to be processed including checks to prevent unauthorized use of Your credit card by fraudsters. In performing these checks Your Personal Information may be disclosed to a registered Credit Reference Agency which may keep a record of that information. You can rest assured that this is done only to confirm Your identity, that a credit check is not performed and that Your credit rating will be unaffected.
 
 Personal Information collected from You during registration / payment will never be published on the Service.
 
@@ -141,7 +141,7 @@ Your comments are important to us and help us improve the service we offer. If Y
 
 ## TRUSTe
 
-192.com is a licensee of the TRUSTe Privacy Program. TRUSTe is an independent, non-profit organization whose mission is to build users' trust in the internet by promoting the use of fair information practices. This privacy statement covers the site [www.192.com](http://www.192.com/ "192.com homepage"). Because this web site wants to demonstrate its commitment to Your privacy, it has agreed to disclose its information practices and have its privacy practices reviewed for compliance by TRUSTe.
+192.com is a licensee of the TRUSTe Privacy Program. TRUSTe is an independent organization whose mission is to build users' trust in the internet by promoting the use of fair information practices. This privacy statement covers the site [www.192.com](http://www.192.com/ "192.com homepage"). Because this web site wants to demonstrate its commitment to Your privacy, it has agreed to disclose its information practices and have its privacy practices reviewed for compliance by TRUSTe.
 
 If you have questions or concerns regarding this statement, You should first contact [Customer Services](http://www.192.com/help/contact/ "Contact Us"). If You do not receive acknowledgement of Your enquiry or Your enquiry has not been satisfactorily addressed, You should contact [TRUSTe](http://www.truste.org/consumers/watchdog_complaint.php/ "Contact TRUSTe") who will then serve as a liaison with 192.com to resolve Your concerns.
 
